[tool.poetry]
name = "camera_raw"
version = "0.1.0"
description = ""
authors = ["ayumu.mochizuki <ayumu839.a@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rawpy = "^0.17.0"
imageio = "^2.13.5"
matplotlib = "^3.5.1"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
